--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-torch==1.7.0
+torch~=1.8.0+cpu
 pytorch_lightning==1.1.0
-numpy==1.19.4
-scipy==1.5.4
-matplotlib==3.3.3
+numpy~=1.18.5
+scipy~=1.5.0
+matplotlib~=3.2.2
+
+tqdm~=4.47.0
+torchaudio~=0.8.0
